--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h1>Dasendhran Subramoney</h1>
             <p>Follow me on:</p>
             <p>
-                <span><a href="https://github.com/CodeSpace-Academy"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
-                <span><a href="https://www.linkedin.com/school/codespaceza/"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
-                <span><a href=""><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
+                <span><a href="https://github.com/dasisubramoney"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
+                <span><a href="https://www.linkedin.com/in/dasendhran-subramoney-045a36241/"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
+                <span><a href="https://codepen.io/Dasendhran-Subramoney"><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
             </p>
         </div>
     </div>    
