--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src="./images/cat-codespace.png" alt="Skytsunami" />
+                <img src="./images/Profile-Pic.jpg" alt="Skytsunami" />
             </a>
         </div>
         <div class="content">
